계열별 필터링 추가, 졸업생 상세 프로필 페이지 디버깅